<resources>
    <string name="app_name">MoneyConverter</string>
    <string name="convert">конвертировать</string>
    <string name="load_dialog_message">Пожалуйста подождите</string>
    <string name="load_data_error_message">Произошла ошибка, попробуйте позже!</string>
    <string name="repeat">попробовать</string>
    <string name="date_label">Дата</string>
    <string name="service_name_label">Имя сервиса</string>
    <string name="network_error">ошибка сети попробуйте позже!</string>
    <string name="select_from_currency">Выберите валюту которую хотите продать</string>
    <string name="select_to_currency">Выберите валюту которую хотите купить</string>
    <string name="zero">0</string>
</resources>
