<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.convert.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_label"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/small" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/date_label"
                        android:gravity="right"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/small"
                        tools:text="23.06.2018" />

                    <TextView
                        android:id="@+id/service_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/date_label"
                        android:layout_marginTop="@dimen/vertical_margin"
                        android:text="@string/service_name_label"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/small" />

                    <TextView
                        android:id="@+id/service_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/date_label"
                        android:layout_marginTop="@dimen/vertical_margin"
                        android:layout_toRightOf="@+id/service_name_label"
                        android:gravity="right"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/small"
                        tools:text="Foreign Currency Market" />
                </RelativeLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/vertical_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/select_from_currency"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/normal" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/currency_from_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/currency_from_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/zero"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/horizontal_margin"
                    android:text="@string/select_to_currency"
                    android:textColor="@color/colorText" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/currency_to_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog" />


                <EditText
                    android:id="@+id/currency_to_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/zero"
                    android:inputType="number"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/convert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@color/colorAccent"
                    android:padding="@dimen/vertical_margin"
                    android:text="@string/convert"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_error" />

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/load_data_error_message" />

                <Button
                    android:id="@+id/repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/vertical_margin"
                    android:text="@string/repeat" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>